<resources>
    <string name="app_name">PhotoDoc</string>
    <string name="action_settings">Settings</string>

    <string name="activity_main_btn_camera">Camera</string>
    <string name="activity_main_btn_gallery">Gallery</string>

    <string name="activity_editing_tv_undo">Undo</string>
    <string name="activity_editing_tv_redo">Redo</string>
    <string name="activity_editing_tv_save">Save</string>

    <string name="save_sucess">Image saved successfully!</string>
    <string name="save_failure">Failure while saving the image!</string>
    <string name="saving">Saving...</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="textdialog_text">Please enter your text</string>

    <string name="savedialog_title">Do you really want to exit without saving?</string>
    <string name="savedialog_positive">Save</string>
    <string name="savedialog_negative">Discard</string>

    <string name="toolbar_crop">Crop</string>
    <string name="toolbar_rotate">Rotate</string>
    <string name="toolbar_hflip">H. Flip</string>
    <string name="toolbar_vflip">V. Flip</string>
    <string name="toolbar_filter">Filter</string>
    <string name="toolbar_text">Text</string>
    <string name="toolbar_brush">Brush</string>
    <string name="toolbar_erase">Erase</string>

    <string name="filterbar_none">NONE</string>
    <string name="filterbar_auto_fix">AUTO-FIX</string>
    <string name="filterbar_black_white">BLACK-WHITE</string>
    <string name="filterbar_contrast">CONTRAST</string>
    <string name="filterbar_brightness">BRIGHTNESS</string>
    <string name="filterbar_documentary">DOCUMENTARY</string>
    <string name="filterbar_sepia">SEPIA</string>
    <string name="filterbar_saturate">SATURATE</string>
    <string name="filterbar_temperature">TEMPERATURE</string>
    <string name="filterbar_negative">NEGATIVE</string>
    <string name="filterbar_fish_eye">FISH-EYE</string>
    <string name="filterbar_fill_light">FILL-LIGHT</string>
    <string name="filterbar_vignette">VIGNETTE</string>
</resources>
