<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditingActivity"
    android:background="#e6e6e6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editing_activity_btn_home"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/comic_sans_mc"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/editing_activity_ll_undo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_undo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/activity_editing_tv_undo"
                    android:textColor="#000"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editing_activity_ll_redo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_redo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/activity_editing_tv_redo"
                    android:textColor="#000"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editing_activity_ll_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_save" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/activity_editing_tv_save"
                    android:textColor="#000"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#af0000"/>

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ja.burhanrashid52.photoeditor.PhotoEditorView>

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:cropBorderLineColor="#af0000"
            app:cropBorderCornerColor="#af0000"
            app:cropGuidelinesColor="#af0000">

        </com.theartofdev.edmodo.cropper.CropImageView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/editing_activity_rv_filter"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/customborder"
            android:layout_margin="5dp"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/editing_activity_ll_brush"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/customborder"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#af0000"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/editing_activity_rv_tools"
            android:layout_width="match_parent"
            android:layout_height="56dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/editing_activity_ll_crop"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/editing_activity_btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/comic_sans_mc"
                android:text="@string/cancel"
                android:textSize="22sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#af0000"/>

            <Button
                android:id="@+id/editing_activity_btn_crop"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/comic_sans_mc"
                android:text="@string/toolbar_crop"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>